--- a/client/styles.css
+++ b/client/styles.css
@@ -1,34 +1,36 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
   background-color: snow;
+  background: linear-gradient(90deg, #1cb5e0 0%, #000851 100%);
 }
 
 header {
-  height: 80px; 
-  display: flex; 
-  justify-content: center; 
+  height: 80px;
+  display: flex;
+  justify-content: center;
   align-items: center;
   color: darkslategray;
 }
 
 main {
-  display: flex; 
+  display: flex;
   justify-content: center;
 }
 
 form {
   width: 350px;
   min-height: 350px;
-  background-color: darkslategray;
+  /* background-color: blue; */
+  background: linear-gradient(90deg, #1cb5e0 0%, #000851 100%);
   position: relative;
-  display: flex; 
+  display: flex;
   flex-direction: column;
-  justify-content: space-evenly; 
+  justify-content: space-evenly;
   align-items: center;
   margin: 30px;
 }
@@ -46,7 +48,7 @@ button {
   margin: 5px;
 }
 
-input[type='text'] {
+input[type="text"] {
   width: 85%;
   height: 30px;
   border: none;
@@ -55,7 +57,7 @@ input[type='text'] {
   background-color: snow;
 }
 
-input[type='password'] {
+input[type="password"] {
   width: 85%;
   height: 30px;
   border: none;
@@ -74,7 +76,19 @@ input[type='password'] {
 .user-card {
   background-color: turquoise;
   width: 300px;
-  margin: 20px; 
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 12px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.user-card-2 {
+  background-color: rgb(153, 204, 199);
+  width: 300px;
+  margin: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -97,16 +111,18 @@ input[type='password'] {
   font-size: 15px;
   margin: 5px 0;
 }
+.message {
+  font-size: 15px;
+  margin: 5px 0;
+}
 
 .last-name {
   font-size: 15px;
   margin: 5px 0;
 }
 
-
-
 .btns-container {
-  width: 100%; 
+  width: 100%;
   display: flex;
   justify-content: space-evenly;
   margin: 5px;
@@ -114,4 +130,26 @@ input[type='password'] {
 
 .btns-container > button {
   width: 20px;
+}
+.color4 {
+  color: black;
+  font-weight: normal;
+  background-color: maroon;
+}
+.color5 {
+  color: black;
+  font-weight: normal;
+  background-color: yellow;
+}
+
+.color6 {
+  color: black;
+  font-weight: normal;
+  background-color: orange;
+}
+.color7 {
+  color: black;
+  font-weight: normal;
+  background-color: gold;
+  font-style: italic;
 }
